# api.jobl.ai

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1430cb678afb_add_job_labelling_table.py  2e77decb51a7_add_currency_to_source_countries.py  3c1d2e4f5a6b_add_sync_state_table.py  4df52e56f2ef_add_alternate_names_to_countries.py  6643976ba29a_add_verified_to_job_labelling.py  7e8f9a0b1c2d_drop_normalization_samples_table.py  849f9303f11c_add_categories_table.py  8fbdbc0245c6_add_jobs_active_view_and_active_indexes.py  a4a28728cc82_create_source_countries_and_jobs_tables.py  b5c6d7e8f9a0_add_category_to_jobs_and_category_map.py  c3e2a1b9d4f0_refactor_normalization_schema_for_email_masking.py  e6c9f3a1b2d4_add_email_to_normalization_samples.py
app/: main.py
app/api/: router.py
app/api/v1/: process.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  category.py  category_map.py  country.py  job.py  normalization_sample.py  source_country.py  sync_state.py
app/services/: categorizer.py  cleaner.py  language.py  normalizer.py
deploy/: jobl-api.service
deploy/nginx/: api.jobl.ai
labelling/: main.py
labelling/templates/: index.html
libs/common/: README.md  pyproject.toml
libs/common/common/: db.py  settings.py
scripts/: evaluate_cleaner_extractor.py  extract_labelling_data.py  generate_training_data.py  generate_training_data_labelled.py  seed_category_map.py  test_light_endpoint.py  test_process_endpoint.py  train_categorizer.py  tune_categorizer.py
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/alembic/versions/: 0784978dd5ac_add_countries_lookup_and_sample_.py  07fca9359d00_add_normalization_samples_table.py  1c96ff4d0e2e_add_language_code_to_normalization_samples.py  2f40abe9cf1a_add_normalization_backlog_index.py  6b51f1ce3b6d_add_language_code_to_jobs.py  a4a28728cc82_create_source_countries_and_jobs_tables.py  b2ff36274cb3_add_language_codes_array_to_countries.py  d4f1b8e7a2c9_rename_normalization_samples_title_raw_to_title.py  f7a8b9c1d2e3_add_company_name_to_normalization_samples.py
services/api/app/: main.py
services/api/app/core/: config.py
services/api/app/models/: __init__.py  country.py  job.py  normalization_sample.py  source_country.py
services/api/sql/: seed_countries.sql  seed_source_countries.sql
services/inference/: .env.example  .gitignore  pyproject.toml
services/inference/app/: benchmark_runner.py  config.py  io_utils.py  language.py  main.py  normalizer.py  schemas.py
services/llm/: README.md
services/normalize/: .env.example  README.md  pyproject.toml
services/normalize/app/: config.py  eval_runner.py  llm_label_debug_runner.py  llm_label_runner.py  main.py  ml_title_runner.py  process_emails_runner.py  sample_builder.py  worker.py
services/sync/: .env.example  README.md  pyproject.toml
services/sync/app/: config.py  language_backfill.py  main.py  worker.py
services/test/: .env.example  pyproject.toml
services/test/app/: config.py  main.py  stress_runner.py
services/training/: .env.example  .gitignore  README.md  pyproject.toml
services/training/app/: build_chunks_runner.py  build_jsonl_runner.py  chunking.py  config.py  eval_lora_deepseek_runner.py  eval_lora_runner.py  eval_seq2seq_runner.py  export_runner.py  io_utils.py  split_runner.py  train_lora_deepseek_runner.py  train_lora_runner.py  train_seq2seq_runner.py
sql/: category_map.csv  seed_categories.sql
sync/: config.py  language_backfill.py  main.py  worker.py
