[project]
name = "jobl-api"
version = "0.1.0"
description = "Jobl AI FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.5",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.9",
  "pymysql>=1.1.1",
  "langid>=1.1.6",
  "torch>=2.7.0",
  "transformers>=4.52.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "python-dateutil>=2.9.0",
  "lightgbm>=4.3.0",
  "scikit-learn>=1.5.0",
  "optimum[exporters,onnxruntime]>=1.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
jobl-sync = "sync.main:run"
jobl-sync-language-backfill = "sync.language_backfill:run"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "sync*"]
