[project]
name = "jobl-common"
version = "0.1.0"
description = "Shared utilities for Jobl backend services"
requires-python = ">=3.11"
dependencies = [
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
