[project]
name = "jobl-inference"
version = "0.1.0"
description = "Job title normalisation inference service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "langid>=1.1.6",
  "torch>=2.7.0",
  "transformers>=4.52.0",
]

[project.scripts]
jobl-inference = "app.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
