[project]
name = "jobl-normalize"
version = "0.1.0"
description = "Job normalization worker for title/description fields"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.10.1",
  "openai>=1.68.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
jobl-normalize-extract-samples = "app.sample_builder:run"
jobl-normalize-process-emails = "app.process_emails_runner:run"
jobl-normalize-process-titles = "app.llm_label_runner:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
