[project]
name = "jobl-test"
version = "0.1.0"
description = "Utilities for testing Jobl services"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.scripts]
jobl-test-inference = "app.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
