[project]
name = "jobl-training"
version = "0.1.0"
description = "Dataset prep and LoRA training helpers for Jobl mini-LLM"
requires-python = ">=3.11"
dependencies = [
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
train = [
  "torch>=2.7.0",
  "transformers>=4.52.0",
  "datasets>=3.0.0",
  "peft>=0.15.0",
  "trl>=0.9.6",
  "accelerate>=1.6.0",
]

dev = [
  "pytest>=8.4.0",
]

[project.scripts]
jobl-training-export = "app.export_runner:run"
jobl-training-split = "app.split_runner:run"
jobl-training-build-jsonl = "app.build_jsonl_runner:run"
jobl-training-build-chunks = "app.build_chunks_runner:run"
jobl-training-train-lora = "app.train_lora_runner:run"
jobl-training-train-lora-deepseek = "app.train_lora_deepseek_runner:run"
jobl-training-eval-lora = "app.eval_lora_runner:run"
jobl-training-eval-lora-deepseek = "app.eval_lora_deepseek_runner:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
